Format phone number of record as a US number
**Why**: Only US numbers can be used as the phone number of record. This
commit changes the frontend JS so that the text fields only formats US
numbers and prevents the user from typing an international number.

Don't use intl number for init value in IdV form

**Why**: We don't allow the user to use an international number during
identity verification, so we should not populate the form with an
international number as the initial value

--- a/app/views/verify/phone/new.html.slim
+++ b/app/views/verify/phone/new.html.slim
@@ -12,6 +12,8 @@ p.mt-tiny.mb2 = t('idv.messages.phone.intro')
       = t('idv.messages.phone.in_your_name')
     li
       = t('idv.messages.phone.prepaid')
+    li
+      = t('idv.messages.phone.us_country_code')
 
 em
   = t('idv.messages.phone.same_as_2fa')
@@ -22,7 +24,7 @@ em
   span.ml1
     em
      = t('idv.form.phone_label_aside')
-  = f.input :phone, required: true, input_html: { class: 'phone' }, label: false,
+  = f.input :phone, required: true, input_html: { class: 'us-phone' }, label: false,
     wrapper_html: { class: 'inline-block mr2' }
   = f.button :submit, t('forms.buttons.continue')
 
