User can exit verification flow early if they are they are still within 2fa

--- a/app/views/shared/_cancel.html.slim
+++ b/app/views/shared/_cancel.html.slim
@@ -1,7 +1,7 @@
 - cancel = sign_up_or_idv_no_js_link || link
 
 .mt2.pt1.border-top
-  - if !user_signing_up? && user_verifying_identity?
+  - if user_can_exit_early?
     = link_to cancel_link_text, '/', class: 'h5'
   - elsif user_signing_up? || user_verifying_identity?
     - method = user_signing_up? ? :delete : :get
