Finance other page js interaction

--- a/app/views/verify/finance_other/new.html.slim
+++ b/app/views/verify/finance_other/new.html.slim
@@ -4,28 +4,23 @@ h1.h3.my0 = @view_model.title
 p.mt-tiny.mb0 = t('idv.messages.finance.intro_account')
 = simple_form_for(@view_model.idv_form, url: verify_finance_path,
     html: { autocomplete: 'off', method: 'put', role: 'form' }) do |f|
-  .select-alt.mb2
-    = f.collection_select(:finance_type, Idv::FinanceForm.finance_other_type_choices,
-      :first, :last,
-      { include_blank: t('idv.form.select_financial_account') },
-      class: 'col-12 field')
   .clearfix.mxn1
-    .col.col-12.sm-col-8.px1
+    .col.col-12.px1
       - Idv::FinanceForm.finance_other_type_inputs.each do |key, label, html_options|
-        label #{label}
-        label.btn-border.col-12.sm-mr2.mb2.sm-mb0
-          .radio.radio-with-input
-            = radio_button_tag 'test-again', key, true,
+        label.btn-border.col-12.mb2
+          .radio.radio-with-inputs
+            = radio_button_tag 'idv_finance_form[finance_type]', key, false,
               class: 'js-finance-choice-select'
             span.indicator
-            = label
+            span.option
+              = label
             = f.input key,
-                      label: label,
-                      label_html: { class: 'hide' },
+                      label: "Account number",
+                      label_html: { class: 'bold' },
                       required: false,
                       wrapper_html: { class: 'js-finance-wrapper', data: { type: key } },
                       input_html: html_options
-    .col.col-12.sm-col-4.px1
+    .col.col-12.px1
       = f.button :submit,
                  t('forms.buttons.continue'),
                  disabled: true,
