--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,4 +1,5 @@
 $radio-checkbox-space: 1.5rem;
+$radio-padding: 24px;
 
 @media #{$breakpoint-sm} {
   input,
@@ -83,8 +84,16 @@ input::-webkit-inner-spin-button {
 .checkbox,
 .radio {
   cursor: pointer;
-  padding-left: 24px;
+  padding-left: $radio-padding;
   position: relative;
+}
+
+.radio.radio-with-inputs {
+  padding-left: 0;
+
+  .option {
+    padding-left: $radio-padding;
+  }
 }
 
 .checkbox input,
@@ -155,6 +164,17 @@ input::-webkit-inner-spin-button {
 .radio input:disabled ~ .indicator {
   background-color: $gray-light;
   border-color: $gray;
+}
+
+.radio > div {
+  margin-bottom: $space-1;
+  margin-top: $space-1;
+
+  > input {
+    opacity: 1;
+    position: static;
+    z-index: 1;
+  }
 }
 
 .select-alt {
