--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -1,5 +1,15 @@
 - title t('titles.passwords.forgot')
 
+- if decorated_session.sp_name == 'CBP Trusted Traveler Programs'
+  .alert.alert-notice
+    .bold = 'Coming from Trusted Traveler Programs?'
+    p
+      = 'Your old GOES userID and password won’t work. Please '
+      = link_to 'create a login.gov account.', sign_up_email_url(request_id: params[:request_id])
+    p.mb1
+      = link_to 'Learn more.',
+                'https://login.gov/help/trusted-traveler-programs/sign-in-doesnt-work/'
+
 h1.h3.my0 = t('headings.passwords.forgot')
 p.mt-tiny.mb0#email-description
   = t('instructions.password.forgot')
