--- a/app/views/voice/otp/show.xml.slim
+++ b/app/views/voice/otp/show.xml.slim
@@ -1,6 +1,7 @@
 doctype xml
 Response
-  Say = @message
+  Say language="#{I18n.locale}"
+    = @message
   - if @action_url
     Gather numDigits="1" action=@action_url
       Say = t('voice.otp.repeat_instructions')
