Say phone repeat instruction in current language
**Why**: So the user can understand the instructions since they are
pronounced using their languages pronunciation.

--- a/app/views/voice/otp/show.xml.slim
+++ b/app/views/voice/otp/show.xml.slim
@@ -4,5 +4,6 @@ Response
     = @message
   - if @action_url
     Gather numDigits="1" action=@action_url
-      Say = t('voice.otp.repeat_instructions')
+      Say language="#{I18n.locale}"
+        = t('voice.otp.repeat_instructions')
   Hangup /
