--- a/app/views/verify/address/index.html.slim
+++ b/app/views/verify/address/index.html.slim
@@ -5,23 +5,25 @@ p
 
 = form_tag
   label.block.p2.border.rounded-md.border-light-blue.mb2 for="address_delivery_method_phone"
-    .radiox.mb2
+    .radio.mb2
       = radio_button_tag 'address_delivery_method', :phone
       span.indicator
-      .strong.blue.block = t('idv.messages.select_verification_form.phone_header')
+      strong.blue.block = t('idv.messages.select_verification_form.phone_header')
       span = t('idv.messages.select_verification_form.phone_message')
   
   // USPS verification should always be enabled in prod.
   // This check is a convenience for lower envs.
   - if FeatureManagement.enable_usps_verification?
     label.block.p2.border.rounded-md.border-light-blue.mb2 for="address_delivery_method_usps"
-      .radiox.mb2
+      .radio.mb2
         = radio_button_tag 'address_delivery_method', :usps
         span.indicator
-        .strong.blue.block = t('idv.messages.select_verification_form.usps_header')
+        strong.blue.block = t('idv.messages.select_verification_form.usps_header')
         span = t('idv.messages.select_verification_form.usps_message')
 
   = button_tag t('forms.buttons.continue'), type: 'submit',
     class: 'btn btn-primary col-6 mb2 p2 rounded-lg inline-block'
 
-  = render 'shared/cancel', link: verify_cancel_path
+// Be sure to keep this outdented to the same level as the form above
+// or terrible things will happen to your tests.
+= render 'shared/cancel', link: verify_cancel_path
