LG-741 Fix Webauthn enter key after nickname
**Why**: When focus is on the security key nickname and the user presses the enter key instead of clicking 'Continue' they will get an error.

**How**: Add handlers to the security key nickname input box.  Add a handler for the keypress event and prevent it from doing a form submit on enter.  Add a handler for the keyup event and if it is the enter key have it do the 'Continue' button click

--- a/app/views/users/webauthn_setup/new.html.slim
+++ b/app/views/users/webauthn_setup/new.html.slim
@@ -16,7 +16,7 @@ div
     = hidden_field_tag :attestation_object, '', id: 'attestation_object'
     = hidden_field_tag :client_data_json, '', id: 'client_data_json'
     = label_tag 'code', t('forms.webauthn_setup.nickname'), class: 'block bold'
-    = text_field_tag :name, '', required: true, id: 'name',
+    = text_field_tag :name, '', required: true, id: 'nickname',
           class: 'block col-12 field monospace', size: 16, maxlength: 20,
           'aria-labelledby': 'totp-label'
     = submit_tag t('forms.buttons.submit.default'), id: 'submit-button', class: 'hidden'
