LG-726 Confirm before removing security key
**Why**: So the user can confirm they want to remove their security key or choose to cancel.

**How**: If their security key is their last 2FA option disable the delete link.  If they have another 2FA option allow them to delete by first showing a modal.  This modal will allow them to proceed or cancel and return to the account page.

--- a/app/views/accounts/_webauthn.html.slim
+++ b/app/views/accounts/_webauthn.html.slim
@@ -10,6 +10,7 @@
     .col.col-8.sm-6.truncate
       = cfg.name
     .col.col-4.sm-6.right-align
-      = button_to(t('account.index.webauthn_delete'), webauthn_setup_path(id: cfg.id),
-        method: :delete, class: 'btn btn-link')
+      = link_to_if(MfaPolicy.new(current_user).multiple_factors_enabled?,
+        t('account.index.webauthn_delete'), webauthn_setup_delete_path(id: cfg.id),
+        method: :get, class: 'btn btn-link')
   .clearfix
