--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -32,6 +32,17 @@
   }
 }
 
+.btn-danger {
+  background-color: $red;
+  border: 1px solid $red;
+  border-radius: $border-radius-lg;
+  color: $white;
+
+  &:hover {
+    background-color: $red;
+  }
+}
+
 .btn-wide {
   box-sizing: border-box;
   min-width: 220px;
