--- a/app/views/users/webauthn_setup/delete.html.slim
+++ b/app/views/users/webauthn_setup/delete.html.slim
@@ -1,15 +1,17 @@
-.p0.cntnr-xxskinny.border-box.bg-white.rounded-xxl.modal-warning
-  h2.my2.fs-20p.sans-serif.regular.center
-    = t('forms.webauthn_delete.confirm')
-  hr.mb3.bw4.rounded
-  .mb1.bold
-    = t('forms.webauthn_delete.caution')
+- title t('forms.webauthn_delete.confirm')
 
-  ul.px2.yellow-dots
-    li.mb1 = t('forms.webauthn_delete.bullet_1', app: APP_NAME)
-  .center
-    = button_to(t('account.index.webauthn_delete'), webauthn_setup_path(id: params[:id]),
-            method: :delete, class: 'btn btn-primary col-12 mb2 p2 rounded-lg')
+= image_tag(asset_url('alert/warning-lg.svg'),
+        alt: t('forms.webauthn_delete.confirm'), width: 54)
 
-    = link_to t('users.delete.actions.cancel'), account_path,
-            class: 'btn col-12 p2 rounded-lg border border-blue blue border-box'
+h1.h3.mb1.mt3.my0 = t('forms.webauthn_delete.confirm')
+
+.col-2
+  hr class="mt3 mb2 bw4 rounded border-yellow"
+br
+p == t('forms.webauthn_delete.caution')
+br
+= button_to(t('account.index.webauthn_delete'), webauthn_setup_path(id: params[:id]),
+          method: :delete, class: 'btn btn-primary col-6 mb2 p2 rounded')
+
+= link_to t('links.cancel'), account_path,
+          class: 'btn col-6 p2 rounded-lg border border-blue blue border-box center'
