--- a/app/assets/stylesheets/variables/_colors.scss
+++ b/app/assets/stylesheets/variables/_colors.scss
@@ -16,12 +16,12 @@ $red: #e21c3d !default;
 $fuchsia: #f012be !default;
 $purple: #b10dc9 !default;
 $maroon: #85144b !default;
-$white: #fff !default;
+$white: #ffffff !default;
 $silver: #d9dadb !default;
 $gray: #5b616a !default;
-$gray-light: #ddd !default;
+$gray-light: #dddddd !default;
 $gray-lighter: #fafafa !default;
-$black: #111 !default;
+$black: #111111 !default;
 $pink: #eb4d67 !default;
-$red: #f00 !default;
+$red: #ff0000 !default;
 $red-lightest: #fff7f8 !default;
