--- a/app/views/account_recovery_setup/index.html.slim
+++ b/app/views/account_recovery_setup/index.html.slim
@@ -10,12 +10,12 @@ p.mt-tiny.mb3 = @presenter.info
   .mb3
     fieldset.m0.p0.border-none.
       legend.mb2.serif.bold = @presenter.label
-      - @presenter.options.each do |option|
+      - @presenter.options.each_with_index do |option, index|
         label.btn-border.col-12.mb2 for="two_factor_options_form_selection_#{option.type}"
           .radio
             = radio_button_tag('two_factor_options_form[selection]',
               option.type,
-              @two_factor_options_form.selected?(option.type))
+              index.zero?)
             span.indicator.mt-tiny
             span.blue.bold.fs-20p = option.label
             .regular.gray-dark.fs-10p.mb-tiny = option.info
