--- a/app/views/two_factor_authentication/otp_verification/show.html.slim
+++ b/app/views/two_factor_authentication/otp_verification/show.html.slim
@@ -26,7 +26,7 @@ p == @presenter.phone_number_message
     inline-block.span style="white-space:nowrap;"
       = check_box_tag 'remember_device', true, false, class: 'my2 ml2 mr1'
       = label_tag 'remember_device',
-        t('forms.messages.remember_device', duration: Figaro.env.remember_device_expiration_days),
+        t('forms.messages.remember_device'),
         class: 'blue'
 br
 - if @presenter.update_phone_link.present?
