--- a/app/views/users/webauthn_setup/delete.html.slim
+++ b/app/views/users/webauthn_setup/delete.html.slim
@@ -10,7 +10,7 @@ h1.h3.mb1.mt3.my0 = t('forms.webauthn_delete.confirm')
 br
 p == t('forms.webauthn_delete.caution')
 br
-= button_to(t('account.index.webauthn_delete'), webauthn_setup_path(id: params[:id]),
+= button_to(t('account.index.webauthn_confirm_delete'), webauthn_setup_path(id: params[:id]),
           method: :delete, class: 'btn btn-primary col-6 mb2 p2 rounded')
 
 = link_to t('links.cancel'), account_path,
