--- a/app/views/accounts/_current_sign_in.html.slim
+++ b/app/views/accounts/_current_sign_in.html.slim
@@ -1,6 +1,6 @@
 .p2.clearfix.border-top
   .clearfix.mxn1
     .sm-col.sm-col-6.px1
-      .bold.truncate = description
+      .bold = presenter.current_sign_in_location_and_ip
     .sm-col.sm-col-6.px1.sm-right-align
-      = UtcTimePresenter.new(timestamp).to_s
+      = presenter.current_timestamp
