--- a/app/views/accounts/_identity_item.html.slim
+++ b/app/views/accounts/_identity_item.html.slim
@@ -8,4 +8,4 @@
         - else
           = t('event_types.authenticated_at', service_provider: event.display_name)
     .sm-col.sm-col-6.px1.sm-right-align
-      = event.happened_at_in_words
+      = local_time(event.happened_at, t('time.formats.event_timestamp'))
