--- a/app/views/users/backup_code_setup/index.html.slim
+++ b/app/views/users/backup_code_setup/index.html.slim
@@ -3,20 +3,21 @@
 
 h1.h3.my0 = t('forms.backup_code.info')
 p.mt-tiny.mb3 = t('forms.backup_code.instructions')
-ul.list-reset
-  li.py2.border-top
-    .inline-block.bold = t('forms.backup_code.subtitle1')
-    .inline-block = t('forms.backup_code.subinfo1')
-  li.py2.border-top
-    .mb2
-      - @codes.each_with_index  do |code, index|
-        p.mt-tiny.mb0 = code
-  li.py2.border-top
-    .sm-col-9.sm-ml-28p
-      = form_tag(backup_code_setup_path, method: :patch, role: 'form', class: 'mb1') do
-        .clearfix.mxn1
-          .col.col-6.sm-col-5.px1
-            = button_tag t('forms.buttons.continue'), type: 'submit', class: 'btn btn-primary btn-wide'
+.mb3
+  fieldset.m0.p0.rounded-xl
+    ul.list-reset
+      li.px-12p.border-none
+        .inline-block.bold = t('forms.backup_code.subtitle1')
+        .inline-block = t('forms.backup_code.subinfo1')
+      li.py-12p.border-top
+        .mb2
+          - @codes.each_with_index  do |code, index|
+            p.px-12p.mb0 = code
+
+= form_tag(backup_code_setup_path, method: :patch, role: 'form', class: 'mb1') do
+  .clearfix.mxn1
+    .col.col-6.sm-col-5.px1
+      = button_tag t('forms.buttons.continue'), type: 'submit', class: 'btn btn-primary btn-wide'
 
 = render 'shared/cancel_or_back_to_options'
 
